--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint .",
+        "preview": "vite preview",
         "predeploy": "npm run build",
         "deploy": "gh-pages -d dist"
     },
@@ -26,9 +30,5 @@
         "globals": "^16.0.0",
         "sass-embedded": "^1.92.1",
         "vite": "^6.3.5"
-    },
-    "scripts": {
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d dist"
     }
 }
